--- a/packages/SystemUI/res/values/aosap_strings.xml
+++ b/packages/SystemUI/res/values/aosap_strings.xml
@@ -16,6 +16,12 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- Advanced reboot -->
+    <string name="global_action_restart_advanced">Advanced</string>
+    <string name="global_action_restart_recovery">Recovery</string>
+    <string name="global_action_restart_bootloader">Bootloader</string>
+    <string name="global_action_restart_ui">SystemUI</string>
+
     <!-- AOD QS tile -->
     <string name="quick_settings_aod_label">AOD</string>
 
