SystemUI:Add LTE Tile
xyyx: reworked

Change-Id: Ied6f9abf691aaf77b367da5f362b25c2abd813e5
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>
Signed-off-by: mracar07 <umutcan@umutcanacar.me>

--- a/packages/SystemUI/res/values/aosap_strings.xml
+++ b/packages/SystemUI/res/values/aosap_strings.xml
@@ -132,4 +132,9 @@
     <string name="navbar_editor_title">Editor</string>
     <string name="navbar_editor_summary">Configure navigaton bar</string>
 
+    <!-- LTE QS Tile -->
+    <string name="qs_lte_label">LTE</string>
+    <string name="lte_on">LTE ON </string>
+    <string name="lte_off">LTE OFF</string>
+
 </resources>
