fwb: Seperate statusbar from tuner and launch externally
xyyx: Adapted for O and replaced style
ezio84: SystemUI tuner activities: fix SysUI fc on rotation
Change-Id: Ib8142f425f4a7119a71dbe8d6892a0662517ed40
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>
Signed-off-by: mracar07 <umutcan@umutcanacar.me>

--- a/packages/SystemUI/res/values/aosap_strings.xml
+++ b/packages/SystemUI/res/values/aosap_strings.xml
@@ -39,6 +39,8 @@
     <!-- Sound search tile -->
     <string name="quick_settings_sound_search">Sound search</string>
 
+    <string name="statusbar_items_title">Statusbar icon</string>
+
     <!-- Screen recorder -->
     <string name="screenrecord_stopdot_label">Show stop dot</string>
 
