base: SystemUI: add back QS hide label
if enabled label click (secondary) will be reassigned to long click
for dual target tiles

Change-Id: I440362ab38057cbfba7750d75825179bd830c4e8
Signed-off-by: Anirudh Gupta <anirudhgupta109@gmail.com>

--- a/packages/SystemUI/res/values/aosap_dimens.xml
+++ b/packages/SystemUI/res/values/aosap_dimens.xml
@@ -17,4 +17,7 @@
 <resources>
     <!-- screenrecord -->
     <dimen name="screenrecord_dot_size">48dp</dimen>
+
+    <!-- QS tile height -->
+    <dimen name="qs_tile_height_wo_label">48dp</dimen>
 </resources>
