Force disable PlayServices OTA checks
Force disable Play Services OTA checks once forever
instead of doing it in the settings tree like we did on N

Change-Id: I20cef05ffec827926af48697883313a67b755025
Signed-off-by: mracar07 <umutcan@umutcanacar.me>

--- a/packages/SettingsProvider/res/values/defaults.xml
+++ b/packages/SettingsProvider/res/values/defaults.xml
@@ -220,4 +220,7 @@
 
     <!-- Default for Settings.Global.TETHER_DUN_REQUIRED -->
     <integer name="def_tether_dun_required">0</integer>
+
+    <!-- Disable automatic updates -->
+    <integer name="def_ota_disable_automatic_update">1</integer>
 </resources>
