Power button flashlight toggle: add proximity sensor check
cm/lineage guys managed the proximity sensor in a really nice and reliable
way for the proximity wake feature, so let's kang and adapt it to block
flashlight toggling when the sensor is covered.

Change-Id: I0851df54341c4223e90a8926ca762c408c4a2b89
Signed-off-by: Anirudh Gupta <anirudhgupta109@gmail.com>
Signed-off-by: mracar07 <umutcan@umutcanacar.me>

--- a/core/res/res/values/aosap_symbols.xml
+++ b/core/res/res/values/aosap_symbols.xml
@@ -32,4 +32,7 @@
   <java-symbol type="string" name="reboot_title" />
   <java-symbol type="string" name="reboot_message" />
 
+  <!-- Seconds after which power button torch times out when proximity sensor is covered -->
+  <java-symbol type="integer" name="config_flashlightProximityTimeout" />
+
 </resources>
