--- a/core/res/res/values/aosap_config.xml
+++ b/core/res/res/values/aosap_config.xml
@@ -15,4 +15,7 @@
     <!-- pdp data retry for cause 29, 33 and 55-->
     <bool name="config_pdp_retry_for_29_33_55_enabled">false</bool>
 
+    <!-- Seconds after which power button torch times out when proximity sensor is covered -->
+    <integer name="config_flashlightProximityTimeout">300</integer>
+
 </resources>
