--- a/packages/SystemUI/res/values/aosap_strings.xml
+++ b/packages/SystemUI/res/values/aosap_strings.xml
@@ -36,6 +36,9 @@
     <string name="quick_settings_network_adb_label">ADB over network</string>
     <string name="quick_settings_network_adb_toast">USB debugging is not enabled</string>
 
+    <!-- Sound search tile -->
+    <string name="quick_settings_sound_search">Sound search</string>
+
     <!-- Screen recorder -->
     <string name="screenrecord_stopdot_label">Show stop dot</string>
 
