--- a/packages/SystemUI/res/values/aosap_strings.xml
+++ b/packages/SystemUI/res/values/aosap_strings.xml
@@ -36,8 +36,9 @@
     <string name="quick_settings_network_adb_label">ADB over network</string>
     <string name="quick_settings_network_adb_toast">USB debugging is not enabled</string>
 
-    <!-- Sound search tile -->
+    <!-- Sound Search tile -->
     <string name="quick_settings_sound_search">Sound search</string>
+    <string name="quick_settings_sound_search_no_app">Sorry, but this doesn\'t work if you don\'t have a Sound search app.</string>
 
     <string name="statusbar_items_title">Statusbar icon</string>
     <string name="lockscreen_default">Default</string>
