base: Actually fix the padding on StatusBar
Android P gets a new QS layout that looks good but it has some issues on smaller screens devices, like the rounded buttons clipping with the borders and the date not looking really good.
LineageOS suggested a fix (https://review.lineageos.org/224021) but it's circumventing it because it adds padding and some people doesn't like the padding, so, instead let's apply the 8dp spacing over the affected headers and the small qs tile.

Android 10 edit: Let's add it back, but let's set the value to 0, because there's more notched devices that un-notched on our roster

Change-Id: I45e94b4a5b9948961285a0c2bd1ced20f31425be
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>

--- a/packages/SystemUI/res/values/aosap_dimens.xml
+++ b/packages/SystemUI/res/values/aosap_dimens.xml
@@ -20,4 +20,7 @@
 
     <!-- QS tile height -->
     <dimen name="qs_tile_height_wo_label">48dp</dimen>
+
+    <!-- Sets a custom extra padding for the QS icons and statusbar date -->
+    <dimen name="qs_items_padding">0dp</dimen>
 </resources>
