--- a/packages/SystemUI/res/values/aosap_dimens.xml
+++ b/packages/SystemUI/res/values/aosap_dimens.xml
@@ -18,9 +18,18 @@
     <!-- screenrecord -->
     <dimen name="screenrecord_dot_size">48dp</dimen>
 
+    <!-- Network traffic monitor -->
+    <dimen name="net_traffic_multi_text_size">8dp</dimen>
+    <dimen name="net_traffic_txt_img_padding">2dp</dimen>
+
     <!-- QS tile height -->
     <dimen name="qs_tile_height_wo_label">48dp</dimen>
 
     <!-- Sets a custom extra padding for the QS icons and statusbar date -->
     <dimen name="qs_items_padding">0dp</dimen>
+
+    <!-- Burn-in protection -->
+    <dimen name="horizontal_max_swift">3.0dp</dimen>
+    <dimen name="vertical_max_swift">1.0dp</dimen>
+
 </resources>
