base: Expose system icon area weight
This helps us improve the statusbar layout of phones that don't have a notch by showing more icons on the right. This can be achieved by setting the value in overlay between 1.5 to 2.

Change-Id: I4d764af48bdada200c9c68c622ad7d172eb20c69
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>

--- a/packages/SystemUI/res/values/aosap_dimens.xml
+++ b/packages/SystemUI/res/values/aosap_dimens.xml
@@ -32,4 +32,7 @@
     <dimen name="horizontal_max_swift">3.0dp</dimen>
     <dimen name="vertical_max_swift">1.0dp</dimen>
 
+    <!-- System icon area layout weight -->
+    <item name="system_icon_area_weight" format="float" type="integer">1</item>
+
 </resources>
