--- a/core/res/res/values/aosap_symbols.xml
+++ b/core/res/res/values/aosap_symbols.xml
@@ -18,4 +18,7 @@
   <!-- Vendor platform signature -->
   <java-symbol type="array" name="config_vendorPlatformSignatures" />
 
+  <!-- Whether to show a custom view for FOD -->
+  <java-symbol type="bool" name="config_needCustomFODView" />
+
 </resources>
