--- a/packages/SystemUI/res/xml/status_bar_prefs.xml
+++ b/packages/SystemUI/res/xml/status_bar_prefs.xml
@@ -86,6 +86,12 @@
         android:key="vpn"
         android:title="@string/status_bar_vpn" />
 
+    <SwitchPreference
+        android:key="show_volte"
+        android:title="@string/volte_switch_title"
+        android:summary="@string/volte_switch_summary"
+        android:defaultValue="false" />
+
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="roaming"
         android:title="@string/status_bar_roaming" />
