--- a/core/res/res/values/aosap_config.xml
+++ b/core/res/res/values/aosap_config.xml
@@ -45,4 +45,7 @@
         <item>screenshot</item>
         <item>screenrecord</item>
     </string-array>
+
+    <!-- Whether to use scaled brightness (set -1 to disable) -->
+    <integer name="config_useScaleBrightness">-1</integer>
 </resources>
