--- a/core/res/res/values/aosap_symbols.xml
+++ b/core/res/res/values/aosap_symbols.xml
@@ -51,4 +51,7 @@
 
   <!-- Pocket bridge -->
   <java-symbol type="string" name="config_pocketBridgeSysfsInpocket" />
+
+  <!-- Whether to use scaled brightness (set -1 to disable) -->
+  <java-symbol type="integer" name="config_useScaleBrightness" />
 </resources>
