ScreenshotTile: Use secondary label to indicate mode
Change-Id: Idfb974ec28958e97ece065aadc038ec18d6fac7c
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>

--- a/packages/SystemUI/res/values/aosap_strings.xml
+++ b/packages/SystemUI/res/values/aosap_strings.xml
@@ -146,7 +146,8 @@
 
     <!-- Screenshot QS tile -->
     <string name="quick_settings_screenshot_label">Screenshot</string>
-    <string name="quick_settings_region_screenshot_label">Partial screenshot</string>
+    <string name="quick_settings_full_screenshot_label">Full</string>
+    <string name="quick_settings_region_screenshot_label">Partial</string>
 
     <!-- Language toggle tile -->
     <string name="quick_settings_locale_label">Language</string>
