--- a/packages/SystemUI/res/values/aosap_strings.xml
+++ b/packages/SystemUI/res/values/aosap_strings.xml
@@ -40,6 +40,7 @@
     <string name="screenrecord_stopdot_label">Show stop dot</string>
 
     <!-- Power menu item for taking a screenshot [CHAR LIMIT=20]-->
-    <string name="global_action_screenshot_cust">"Screenshot/Rec"</string>
-
+    <string name="screenrecord_low_quality_label">Low quality</string>
+        <!-- Power menu item for taking a screenshot [CHAR LIMIT=20]-->
+    <string name="global_action_screenshot_cust">"Screen/Rec"</string>
 </resources>
