--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2874,6 +2874,7 @@
         <item>logout</item>
         <item>bugreport</item>
         <item>screenshot</item>
+        <item>screenrecord</item>
     </string-array>
         <!--<item>emergency</item>-->
 
