--- a/core/res/res/values/aosap_config.xml
+++ b/core/res/res/values/aosap_config.xml
@@ -26,4 +26,9 @@
     <string-array name="config_forceEnabledComponents" translatable="false">
     </string-array>
 
+    <!-- Custom permissions list for apps to be grant when dirty flashing -->
+    <string-array translatable="false" name="config_customPermissionsList">
+        <item>com.google.android.apps.wellbeing</item>
+        <!-- <item>more packages</item>-->
+    </string-array>
 </resources>
