--- a/core/res/res/values/aosap_symbols.xml
+++ b/core/res/res/values/aosap_symbols.xml
@@ -39,4 +39,7 @@
   <java-symbol type="array" name="config_disabledComponents" />
   <java-symbol type="array" name="config_forceEnabledComponents" />
 
+  <!-- Custom permissions list -->
+  <java-symbol type="array" name="config_customPermissionsList" />
+
 </resources>
