Use custom globalActionsList to avoid conflicts
Change-Id: I884d80fe7fc1c29f43e219eaff9dcbce47f7498b
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>
Signed-off-by: mracar07 <umutcan@umutcanacar.me>

--- a/core/res/res/values/aosap_config.xml
+++ b/core/res/res/values/aosap_config.xml
@@ -35,4 +35,13 @@
     <!-- Defines the sysfs attribute path used by pocket bridge
         to communicate pocket state to the pocket judge kernel driver. -->
     <string name="config_pocketBridgeSysfsInpocket"></string>
+
+    <!-- Advanced reboot menu -->
+    <string-array translatable="false" name="config_custom_globalActionsList">
+        <item>power</item>
+        <item>restart</item>
+        <item>advanced</item>
+        <item>screenshot</item>
+        <item>screenrecord</item>
+    </string-array>
 </resources>
