--- a/core/res/res/values/aosap_symbols.xml
+++ b/core/res/res/values/aosap_symbols.xml
@@ -31,6 +31,7 @@
   <java-symbol type="string" name="reboot_to_bootloader_message" />
   <java-symbol type="string" name="reboot_title" />
   <java-symbol type="string" name="reboot_message" />
+  <java-symbol type="array" name="config_custom_globalActionsList" />
 
   <!-- Seconds after which power button torch times out when proximity sensor is covered -->
   <java-symbol type="integer" name="config_flashlightProximityTimeout" />
