--- a/core/res/res/values/aosap_config.xml
+++ b/core/res/res/values/aosap_config.xml
@@ -52,4 +52,7 @@
     <!-- Whether notify fingerprint client of successful cancelled authentication -->
     <bool name="config_notifyClientOnFingerprintCancelSuccess">false</bool>
 
+    <!-- Whether to show a custom view for FOD -->
+    <bool name="config_needCustomFODView">false</bool>
+
 </resources>
