--- a/packages/SystemUI/res/values/aosap_config.xml
+++ b/packages/SystemUI/res/values/aosap_config.xml
@@ -16,4 +16,8 @@
 <resources>
     <!-- Allow devices override audio panel location to the left side -->
     <bool name="config_audioPanelOnLeftSide">false</bool>
+
+    <!-- Max visible notification icons -->
+    <integer name="config_maxVisibleNotificationIcons">4</integer>
+    <integer name="config_maxVisibleNotificationIconsOnLock">5</integer>
 </resources>
